# Complete-OpenEnv-Environment-Email-Triage

./: .dockerignore  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
email-triage-env/: .gitignore  Dockerfile  README.md  app.py  inference.py  pyproject.toml
email-triage-env/baseline/: heuristic_baseline.py  run_baseline.py
email-triage-env/environment/: env.py  models.py
email-triage-env/environment/tasks/: __init__.py  base_task.py  task_hard.py
environment/: __init__.py  tools.py
environment/tasks/: task_easy.py  task_medium.py
server/: app.py
